--- a/views/index.html
+++ b/views/index.html
@@ -66,7 +66,7 @@
               <h2 class="hero__minititle-1">Обновленный кроссовер</h2>
               <h1 class="hero__title">CHANGAN CS35 PLUS</h1>
               <h2 class="hero__minititle-2">от 2 500 000 руб*</h2>
-              <div class="box">
+              <div class="hero__box">
                 <button class="hero__btn">
                   Гарантия <span class="red">5 лет</span>
                 </button>
