--- a/views/catogory.html
+++ b/views/catogory.html
@@ -767,6 +767,7 @@
 										name="checkbox"
 										id="accept"
 										class="question-checkbox"
+										required
 									/>
 									<p class="question-accept__info">
 										Я соглашаюсь с условиями и даю свое согласие на обработку
@@ -857,7 +858,8 @@
 							<a class="x-cross" href="#">X</a>
 							<p class="map-title">АвтоДинамика</p>
 							<p class="map-subtitle">
-								Автосалонпродажа автомобилей <br> с пробегом
+								Автосалонпродажа автомобилей <br />
+								с пробегом
 							</p>
 							<div class="map-stars">
 								<img
@@ -935,7 +937,9 @@
 										alt="location"
 										class="location-img"
 									/>
-									<a href="https//:auto-dinamika.com" class="map-place-info blue-one"
+									<a
+										href="https//:auto-dinamika.com"
+										class="map-place-info blue-one"
 										>auto-dinamika.com</a
 									>
 								</li>
@@ -989,12 +993,107 @@
 									/>
 									<p class="distance-number">3,1 км</p>
 								</li>
-								
 							</ul>
 						</div>
 					</div>
 				</section>
 			</main>
+
+			<footer>
+				<div class="container">
+					<div class="footer-wrapper">
+						<div class="footer-second-wrapper">
+							<img
+								src="/scss/pages/category/assests/logo.svg"
+								alt=""
+								class="footer-logo"
+							/>
+							<ul class="footer-time">
+								<li class="footer-time-info">
+									<p class="footer-time__time">Ежедневно с 09:00 до 21:00</p>
+									<a class="footer-phone-call" href="tel:++7 495 374-94-88"
+										>+7 495 374-94-88</a
+									>
+									<p class="footer-extra-call">Обратный звонок</p>
+								</li>
+								<li class="footer-time-info padding-one">
+									<a
+										class="footer-email"
+										href="mailto:support@auto-dinamika.com"
+										>support@auto-dinamika.com</a
+									>
+								</li>
+								<li class="footer-time-info">
+									<a
+										class="footer-location"
+										href="https://www.google.com/maps/place/Krylatskaya+Ulitsa,+2+%D1%81%D1%82%D1%80%D0%BE%D0%B5%D0%BD%D0%B8%D0%B5+4,+Moskva,+Russia,+121552/@55.7564909,37.4319938,17z/data=!3m1!4b1!4m6!3m5!1s0x46b5492ac717086d:0xf30772eb7c331e71!8m2!3d55.7564909!4d37.4345687!16s%2Fg%2F11f9j7nsgl?entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D"
+										target="_blank"
+										>г. Москва, ул. Крылатская, <br> д. 2, корп. 4</a
+									>
+								</li>
+								<li class="footer-time-info">
+									<p class="footer-licence">
+										Обращаем ваше внимание на то, что данный Интернет-сайт носит
+										исключительно информационный характер и ни при каких
+										условиях не является публичной <br />
+										офертой, определяемой положениями статьей 435, 437, 494
+										Гражданского кодекса Российской Федерации. Для получения
+										подробной информации о стоимости <br />
+										автомобилей обращайтесь в отдел продаж.*Представленные на
+										сайте калькуляции кредита на автомобиль являются
+										приблизительными, точная стоимость<br />
+										финансирования рассчитывается кредитным специалистом в
+										зависимости от индивидуальных параметров заёмщика при
+										предоставлении двух документов в<br />
+										организацию.
+									</p>
+								</li>
+
+								<li class="footer-time-info">
+									<p class="footer-guarantee">
+										ООО «АВТО-ГАРАНТ», ИНН / КПП 7734459351 / 73401001, Юр.
+										адрес: 123098, г. Москва, ул. Рогова, д. 12, помещение 2П
+										<br />
+										Политика конфиденциальности | Пользовательское соглашение |
+										Условия кредитования
+									</p>
+								</li>
+							</ul>
+							<ul class="footer-second__menu">
+								<li class="second-menu__list">
+									<a href="#" class="menu-list-title">Автомобили</a>
+									<a href="#" class="menu-list-text">Новые автомобили</a>
+									<a href="#" class="menu-list-text">Автомобили с пробегом</a>
+									<a href="#" class="menu-list-text">Автомобили для такси</a>
+								</li>
+								<li class="second-menu__list">
+									<a href="#" class="menu-list-title">Варианты кузова</a>
+									<a href="#" class="menu-list-text">Седан</a>
+									<a href="#" class="menu-list-text">Кроссовер</a>
+									<a href="#" class="menu-list-text">Универсал</a>
+									<a href="#" class="menu-list-text">Внедорожник</a>
+									<a href="#" class="menu-list-text">Хэтчбек</a>
+								</li>
+								<li class="second-menu__list">
+									<a href="#" class="menu-list-title">Услуги</a>
+									<a href="#" class="menu-list-text">Кредит</a>
+									<a href="#" class="menu-list-text">Trade-In</a>
+									<a href="#" class="menu-list-text">Выкуп автомобилей</a>
+									<a href="#" class="menu-list-text">Услуги для такси</a>
+								</li>
+								<li class="second-menu__list">
+									<a href="#" class="menu-list-title">О компании</a>
+									<a href="#" class="menu-list-text">Отзывы</a>
+									<a href="#" class="menu-list-text">Новости</a>
+									<a href="#" class="menu-list-text">Партнеры</a>
+									<a href="#" class="menu-list-text">Контакты</a>
+									<a href="#" class="menu-list-text">Карта сайта</a>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</footer>
 		</div>
 	</body>
 </html>
