--- a/views/autocredit.html
+++ b/views/autocredit.html
@@ -152,7 +152,111 @@
             <div class="program__line"></div>
           </div>
         </section>
-      
+        <section class="auto_dinamic">
+          <div class="dinamic">
+            <h2 class="dinamic__title">
+              Преимущества автокредита в Авто Динамике
+            </h2>
+            <div class="dinamic__main-boxes">
+              <div class="dinamic__main-box">
+                <img
+                  src="/scss/pages/autocredit/assets-auto/image 64.png"
+                  alt=""
+                  class="dinamic__main-img"
+                />
+                <h4 class="dinamic__main-title">Большой выбор</h4>
+                <p class="dinamic__main-text">
+                  Выгодные программы автокредитования от 10 известных банков
+                </p>
+              </div>
+              <div class="dinamic__main-box">
+                <img
+                  src="/scss/pages/autocredit/assets-auto/image 64 (1).png"
+                  alt=""
+                  class="dinamic__main-img"
+                />
+                <h4 class="dinamic__main-title">Быстрое оформление</h4>
+                <p class="dinamic__main-text">
+                  Оформление кредита менее чем за 1 час после получения
+                  одобрения
+                </p>
+              </div>
+              <div class="dinamic__main-box">
+                <img
+                  src="/scss/pages/autocredit/assets-auto/image 64 (2).png"
+                  alt=""
+                  class="dinamic__main-img"
+                />
+                <h4 class="dinamic__main-title">Минимум документов</h4>
+                <p class="dinamic__main-text">
+                  Для оформления кредита достаточно паспорта и водительского
+                </p>
+              </div>
+              <div class="dinamic__main-box">
+                <img
+                  src="/scss/pages/autocredit/assets-auto/image 64 (3).png"
+                  alt=""
+                  class="dinamic__main-img"
+                />
+                <h4 class="dinamic__main-title">Рефинансирование</h4>
+                <p class="dinamic__main-text">
+                  Выгодная программа рефинансирования автокредита
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="get_credit">
+            <h2 class="get_credit-title">
+              3 простых шага для получения кредита
+            </h2>
+            <div class="get_credit-main-boxes">
+              <div class="get_credit-box get_credit-box-one">
+                <img
+                  src="/scss/pages/autocredit/assets-auto/1.png"
+                  alt=""
+                  class="get_credit-img"
+                />
+                <p class="get_credit-text">
+                  Получите расчет кредита у специалиста Авто Динамики
+                </p>    
+              </div>
+              <div class="get_credit-box get_credit-box-two">
+                <img
+                  src="/scss/pages/autocredit/assets-auto/2.png"
+                  alt=""
+                  class="get_credit-img"
+                />
+                <p class="get_credit-text">
+                  Оформите заявку, предъявив только два документа
+                </p>
+              </div>
+              <div class="get_credit-box">
+                <img
+                  src="/scss/pages/autocredit/assets-auto/3.png"
+                  alt=""
+                  class="get_credit-img"
+                />
+                <p class="get_credit-text">
+                  Выберите машину, подпишите кредитный договор и получите Ваш
+                  новый автомобиль
+                </p>
+              </div>
+            </div>
+            <button class="get_credit-btn">Подать заявку</button>
+          </div>
+        </section>
+        <section class="bank__logos">
+          <img src="/scss/pages/autocredit/assets-auto/sberbank.png" alt="" class="bank__logo-img">
+          <img src="/scss/pages/autocredit/assets-auto/sberbank.png" alt="" class="bank__logo-img">
+          <img src="/scss/pages/autocredit/assets-auto/sberbank.png" alt="" class="bank__logo-img">
+          <img src="/scss/pages/autocredit/assets-auto/alfabanl.png" alt="" class="bank__logo-img">
+          <img src="/scss/pages/autocredit/assets-auto/rusbank.png" alt="" class="bank__logo-img">
+          <img src="/scss/pages/autocredit/assets-auto/ingostrax.png" alt="" class="bank__logo-img">
+          <img src="/scss/pages/autocredit/assets-auto/pecobank.png" alt="" class="bank__logo-img">
+          <img src="/scss/pages/autocredit/assets-auto/renesans.png" alt="" class="bank__logo-img">
+          <img src="/scss/pages/autocredit/assets-auto/renesans.png" alt="" class="bank__logo-img">
+          <img src="/scss/pages/autocredit/assets-auto/renesans.png" alt="" class="bank__logo-img">
+        </section>
       </div>
     </main>
   </body>
