--- a/views/news.html
+++ b/views/news.html
@@ -29,7 +29,7 @@
             />
             <ul class="header__bottom-menu">
               <li class="header__bottom-list">
-                <a href="./catogory.html" class="header__bottom-first-link"
+                <a href="./news.html" class="header__bottom-first-link"
                   >Новые автомобили</a
                 >
               </li>
@@ -69,13 +69,124 @@
               <h2 class="orgnews__title">Новости</h2>
               <div class="orgnews__inner">
                 <div class="orgnews__border">
+                  Показать:
                   <p class="orgnews__text">
                     <span class="text-active">12</span> 24 48
                   </p>
                 </div>
-                <div class="orgnews__border"></div>
+                <div class="orgnews__border border-active">Актуальные новости</div>
               </div>
             </div>
+            <ul class="orgnews__menu">
+                <li class="orgnews__item">
+                    <img src="../scss/pages/orgnew/orgnews/orgnews-car.png" alt="green car" class="orgnews__img">
+                    <div class="orgnews__box">
+                        <h5 class="orgnews__data">06 апреля 2023</h5>
+                        <h3 class="orgnews__subtitle">LADA Niva Travel KHL: новая спецверсия для любителей...</h3>
+                        <p class="orgnews__subtext">LADA расширяет гамму комплектаций популярного внедорожника NIVA Travel новой</p>
+                    </div>
+                </li>
+                <li class="orgnews__item">
+                    <img src="../scss/pages/orgnew/orgnews/orgnews-car.png" alt="green car" class="orgnews__img">
+                    <div class="orgnews__box">
+                        <h5 class="orgnews__data">06 апреля 2023</h5>
+                        <h3 class="orgnews__subtitle">LADA Niva Travel KHL: новая спецверсия для любителей...</h3>
+                        <p class="orgnews__subtext">LADA расширяет гамму комплектаций популярного внедорожника NIVA Travel новой</p>
+                    </div>
+                </li>
+                <li class="orgnews__item">
+                    <img src="../scss/pages/orgnew/orgnews/orgnews-car.png" alt="green car" class="orgnews__img">
+                    <div class="orgnews__box">
+                        <h5 class="orgnews__data">06 апреля 2023</h5>
+                        <h3 class="orgnews__subtitle">LADA Niva Travel KHL: новая спецверсия для любителей...</h3>
+                        <p class="orgnews__subtext">LADA расширяет гамму комплектаций популярного внедорожника NIVA Travel новой</p>
+                    </div>
+                </li>
+                <li class="orgnews__item">
+                    <img src="../scss/pages/orgnew/orgnews/orgnews-car.png" alt="green car" class="orgnews__img">
+                    <div class="orgnews__box">
+                        <h5 class="orgnews__data">06 апреля 2023</h5>
+                        <h3 class="orgnews__subtitle">LADA Niva Travel KHL: новая спецверсия для любителей...</h3>
+                        <p class="orgnews__subtext">LADA расширяет гамму комплектаций популярного внедорожника NIVA Travel новой</p>
+                    </div>
+                </li>
+                <li class="orgnews__item">
+                    <img src="../scss/pages/orgnew/orgnews/orgnews-car.png" alt="green car" class="orgnews__img">
+                    <div class="orgnews__box">
+                        <h5 class="orgnews__data">06 апреля 2023</h5>
+                        <h3 class="orgnews__subtitle">LADA Niva Travel KHL: новая спецверсия для любителей...</h3>
+                        <p class="orgnews__subtext">LADA расширяет гамму комплектаций популярного внедорожника NIVA Travel новой</p>
+                    </div>
+                </li>
+                <li class="orgnews__item">
+                    <img src="../scss/pages/orgnew/orgnews/orgnews-car.png" alt="green car" class="orgnews__img">
+                    <div class="orgnews__box">
+                        <h5 class="orgnews__data">06 апреля 2023</h5>
+                        <h3 class="orgnews__subtitle">LADA Niva Travel KHL: новая спецверсия для любителей...</h3>
+                        <p class="orgnews__subtext">LADA расширяет гамму комплектаций популярного внедорожника NIVA Travel новой</p>
+                    </div>
+                </li>
+                <li class="orgnews__item">
+                    <img src="../scss/pages/orgnew/orgnews/orgnews-car.png" alt="green car" class="orgnews__img">
+                    <div class="orgnews__box">
+                        <h5 class="orgnews__data">06 апреля 2023</h5>
+                        <h3 class="orgnews__subtitle">LADA Niva Travel KHL: новая спецверсия для любителей...</h3>
+                        <p class="orgnews__subtext">LADA расширяет гамму комплектаций популярного внедорожника NIVA Travel новой</p>
+                    </div>
+                </li>
+                <li class="orgnews__item">
+                    <img src="../scss/pages/orgnew/orgnews/orgnews-car.png" alt="green car" class="orgnews__img">
+                    <div class="orgnews__box">
+                        <h5 class="orgnews__data">06 апреля 2023</h5>
+                        <h3 class="orgnews__subtitle">LADA Niva Travel KHL: новая спецверсия для любителей...</h3>
+                        <p class="orgnews__subtext">LADA расширяет гамму комплектаций популярного внедорожника NIVA Travel новой</p>
+                    </div>
+                </li>
+                <li class="orgnews__item">
+                    <img src="../scss/pages/orgnew/orgnews/orgnews-car.png" alt="green car" class="orgnews__img">
+                    <div class="orgnews__box">
+                        <h5 class="orgnews__data">06 апреля 2023</h5>
+                        <h3 class="orgnews__subtitle">LADA Niva Travel KHL: новая спецверсия для любителей...</h3>
+                        <p class="orgnews__subtext">LADA расширяет гамму комплектаций популярного внедорожника NIVA Travel новой</p>
+                    </div>
+                </li>
+                <li class="orgnews__item">
+                    <img src="../scss/pages/orgnew/orgnews/orgnews-car.png" alt="green car" class="orgnews__img">
+                    <div class="orgnews__box">
+                        <h5 class="orgnews__data">06 апреля 2023</h5>
+                        <h3 class="orgnews__subtitle">LADA Niva Travel KHL: новая спецверсия для любителей...</h3>
+                        <p class="orgnews__subtext">LADA расширяет гамму комплектаций популярного внедорожника NIVA Travel новой</p>
+                    </div>
+                </li>
+                <li class="orgnews__item">
+                    <img src="../scss/pages/orgnew/orgnews/orgnews-car.png" alt="green car" class="orgnews__img">
+                    <div class="orgnews__box">
+                        <h5 class="orgnews__data">06 апреля 2023</h5>
+                        <h3 class="orgnews__subtitle">LADA Niva Travel KHL: новая спецверсия для любителей...</h3>
+                        <p class="orgnews__subtext">LADA расширяет гамму комплектаций популярного внедорожника NIVA Travel новой</p>
+                    </div>
+                </li>
+                <li class="orgnews__item">
+                    <img src="../scss/pages/orgnew/orgnews/orgnews-car.png" alt="green car" class="orgnews__img">
+                    <div class="orgnews__box">
+                        <h5 class="orgnews__data">06 апреля 2023</h5>
+                        <h3 class="orgnews__subtitle">LADA Niva Travel KHL: новая спецверсия для любителей...</h3>
+                        <p class="orgnews__subtext">LADA расширяет гамму комплектаций популярного внедорожника NIVA Travel новой</p>
+                    </div>
+                </li>
+            </ul>
+            <button class="orgnews__btn">Показать еще</button>
+            <ul class="orgnews__pages">
+                <li class="orgnews__page"><</li>
+                <li class="orgnews__page pasge-active">1</li>
+                <li class="orgnews__page">2</li>
+                <li class="orgnews__page">3</li>
+                <li class="orgnews__page">4</li>
+                <li class="orgnews__page">5</li>
+                <li class="orgnews__page">...</li>
+                <li class="orgnews__page">12</li>
+                <li class="orgnews__page">></li>
+            </ul>
           </div>
         </div>
       </section>
