--- a/css/main.css
+++ b/css/main.css
@@ -2692,4 +2692,49 @@ img {
 .contact__text {
   font-size: 24px;
   font-weight: 600;
+}
+
+.orgnews__wrapper {
+  padding: 30px 309px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  color: #212121;
+}
+
+.orgnews__info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.orgnews__title {
+  font-weight: 600;
+  font-size: 32px;
+}
+
+.orgnews__inner {
+  display: flex;
+  gap: 30px;
+}
+
+.orgnews__border {
+  padding: 7px 15px;
+  border: 1px solid #C7C7C7;
+  display: flex;
+  gap: 91px;
+  font-size: 14px;
+  font-weight: 400;
+  color: #000000;
+}
+
+.orgnews__text {
+  font-size: 14px;
+  font-weight: 400;
+  color: #C7C7C7;
+}
+
+.text-active {
+  color: #000000;
+  font-weight: 600;
 }/*# sourceMappingURL=main.css.map */
