--- a/scss/pages/category/_category.scss
+++ b/scss/pages/category/_category.scss
@@ -693,6 +693,7 @@
 .second-menu__list > a{
 	color: white;
 	font-size: 14px;
+	transition: 0.2s linear;
 }
 
 .menu-list-title{
@@ -705,3 +706,8 @@
 footer{
 	position: relative;
 }
+
+.menu-list-text:hover{
+	transform: scale(1.2);
+}
+
